# untitled_project

./: .gitignore  Cargo.toml
opengl_rendering/: Cargo.toml  build.rs
opengl_rendering/lib/gl/: Cargo.toml
opengl_rendering/render_gl_derive/: Cargo.toml
opengl_rendering/render_gl_derive/src/: lib.rs
opengl_rendering/res/shaders/: triangle.frag  triangle.vert
opengl_rendering/src/: debug.rs  grid.rs  main.rs  resources.rs  triangle.rs
opengl_rendering/src/render_gl/: buffer.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  viewport.rs
python/: format.s  function_creator.py  test.s
sdl_rendering/src/: main.rs
src/: main.rs
src/main/: graphics_functions.py  main.py  map_sample.map
src/main/data/: text.txt
