[package]
name = "dynamic_sprite"
version = "0.1.0"
authors = ["hyarhyar <arttu.hyvonen@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]

time = "0.1"
sdl2 = "0.32.2"
rand = "0.7"
libc = "0.2.62"