[package]
name = "opengl-playground"
version = "0.1.0"
authors = ["aoskarih <ardenberger@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.3"
render_gl_derive = { path = "render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
half = "1.1.1"
nalgebra = "0.18"

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
